Updated page responsiveness / added anchor and scroll down button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <nav></nav>
-    <div id="arrow" class="invisible">
-      
-      🡳</div>
+    <div id="arrow" class="animation invisible">
+      <a href="#information">🡳</a>
+      </div>
     <header>
       <h1>Hrvatska gastronomska mapa</h1>
       <h2>Kliknite na pojedinu županiju za recept</h2>
@@ -169,6 +169,7 @@
         </g>
       </svg>
     </div>
+
     <div class="textArea">
       <div id="information" class="invisible">
         <h2 id="zupanija"></h2>
