Still perfecting responsiveness...

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav></nav>
     <div id="arrow" class="animation invisible">
-      <a href="#information">🡳</a>
+      <a href="#information">V</a>
       </div>
     <header>
       <h1>Hrvatska gastronomska mapa</h1>
@@ -26,6 +26,8 @@
         xmlns:amcharts="http://amcharts.com/ammap"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         version="1.1"
+        viewBox="-600 0 1850 600"
+
       >
         <defs>
           <amcharts:ammap
